Some minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1162,6 +1162,10 @@ section {
         grid-template-columns: 1fr;
     }
 
+    .philosophy-card {
+        grid-column: span 1 !important;
+    }
+
     .memorial-grid {
         grid-template-columns: 1fr;
     }
